--- a/hw1/index.html
+++ b/hw1/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <b>Game Programming with Three.JS</b>
+    <b>Computer Graphics with Three.JS</b>
     <div> Fall 2019</div>
     <div>410606126 吳允呈</div>
     <div>信箱聯絡請點選<a href="gmail.html">這裡</a></div>
@@ -16,10 +16,16 @@
             <td>
                 <img src="clock.gif" width="200px">
             </td>
+            <td>
+                <img src="H2.gif" width="200px">
+            </td>
         </tr>
         <tr>
             <td>
                 <a href="HW1.html">HW1</a>
+            </td>
+            <td>
+                <a href="HW2.html">HW2</a>
             </td>
         </tr>
     </table>
