--- a/hw1/index.html
+++ b/hw1/index.html
@@ -19,6 +19,9 @@
             <td>
                 <img src="H2.gif" width="200px">
             </td>
+            <td>
+                <img src="car.gif" width="200px">
+            </td>
         </tr>
         <tr>
             <td>
@@ -26,6 +29,9 @@
             </td>
             <td>
                 <a href="HW2.html">HW2</a>
+            </td>
+            <td>
+                <a href="HW3.html">HW3</a>
             </td>
         </tr>
     </table>
