--- a/hw1/index.html
+++ b/hw1/index.html
@@ -22,6 +22,9 @@
             <td>
                 <img src="car.gif" width="200px">
             </td>
+            <td>
+                <img src="table.gif" width="200px">
+            </td>
         </tr>
         <tr>
             <td>
@@ -32,6 +35,9 @@
             </td>
             <td>
                 <a href="HW3.html">HW3</a>
+            </td>
+            <td>
+                <a href="HW4.html">HW4</a>
             </td>
         </tr>
     </table>
