--- a/hw1/index.html
+++ b/hw1/index.html
@@ -25,6 +25,9 @@
             <td>
                 <img src="table.gif" width="200px">
             </td>
+            <td>
+                <img src="tearota.gif" width="200px">
+            </td>
         </tr>
         <tr>
             <td>
@@ -38,6 +41,9 @@
             </td>
             <td>
                 <a href="HW4.html">HW4</a>
+            </td>
+            <td>
+                <a href="HW5-1.html">HW5-1</a>
             </td>
         </tr>
     </table>
