--- a/hw1/index.html
+++ b/hw1/index.html
@@ -28,6 +28,9 @@
             <td>
                 <img src="tearota.gif" width="200px">
             </td>
+            <td>
+                <img src="tea5-3.gif" width="200px">
+            </td>
         </tr>
         <tr>
             <td>
@@ -44,6 +47,9 @@
             </td>
             <td>
                 <a href="HW5-1.html">HW5-1</a>
+            </td>
+            <td>
+                <a href="HW5-3.html">HW5-3</a>
             </td>
         </tr>
     </table>
