--- a/hw1/index.html
+++ b/hw1/index.html
@@ -31,6 +31,9 @@
             <td>
                 <img src="tea5-3.gif" width="200px">
             </td>
+            <td>
+                    <img src="tea5-2+5-3.gif" width="200px">
+            </td>
         </tr>
         <tr>
             <td>
@@ -50,6 +53,9 @@
             </td>
             <td>
                 <a href="HW5-3.html">HW5-3</a>
+            </td>
+            <td>
+                    <a href="HW5-2+5-3.html">HW5-3</a>
             </td>
         </tr>
     </table>
