--- a/hw1/index.html
+++ b/hw1/index.html
@@ -34,6 +34,9 @@
             <td>
                     <img src="tea5-2+5-3.gif" width="200px">
             </td>
+            <td>
+                    <img src="mono.gif" width="200px">
+            </td>
         </tr>
         <tr>
             <td>
@@ -55,7 +58,10 @@
                 <a href="HW5-3.html">HW5-3</a>
             </td>
             <td>
-                    <a href="HW5-2+5-3.html">HW5-3</a>
+                <a href="HW5-2+5-3.html">HW5-3</a>
+            </td>
+            <td>
+                <a href="HW6.html">HW6</a>
             </td>
         </tr>
     </table>
