--- a/hw1/index.html
+++ b/hw1/index.html
@@ -32,10 +32,13 @@
                 <img src="tea5-3.gif" width="200px">
             </td>
             <td>
-                    <img src="tea5-2+5-3.gif" width="200px">
+                <img src="tea5-2+5-3.gif" width="200px">
             </td>
             <td>
-                    <img src="mono.gif" width="200px">
+                <img src="mono.gif" width="200px">
+            </td>
+            <td>
+                <img src="6-2 final.gif" width="200px">
             </td>
         </tr>
         <tr>
@@ -63,6 +66,9 @@
             <td>
                 <a href="HW6.html">HW6</a>
             </td>
+            <td>
+                <a href="HW6-2.html">HW6-2</a>
+            </td>            
         </tr>
     </table>
 </body>
