--- a/hw1/index.html
+++ b/hw1/index.html
@@ -22,6 +22,19 @@
             <td>
                 <img src="car.gif" width="200px">
             </td>
+        </tr>
+        <tr>
+            <td>
+                <a href="HW1.html">HW1</a>
+            </td>
+            <td>
+                <a href="HW2.html">HW2</a>
+            </td>
+            <td>
+                <a href="HW3.html">HW3</a>
+            </td>
+        </tr>
+        <tr>
             <td>
                 <img src="table.gif" width="200px">
             </td>
@@ -31,6 +44,19 @@
             <td>
                 <img src="tea5-3.gif" width="200px">
             </td>
+        </tr>
+        <tr>
+            <td>
+                <a href="HW4.html">HW4</a>
+            </td>
+            <td>
+                <a href="HW5-1.html">HW5-1</a>
+            </td>
+            <td>
+                <a href="HW5-3.html">HW5-3</a>
+            </td>     
+        </tr>
+        <tr>
             <td>
                 <img src="tea5-2+5-3.gif" width="200px">
             </td>
@@ -43,24 +69,6 @@
         </tr>
         <tr>
             <td>
-                <a href="HW1.html">HW1</a>
-            </td>
-            <td>
-                <a href="HW2.html">HW2</a>
-            </td>
-            <td>
-                <a href="HW3.html">HW3</a>
-            </td>
-            <td>
-                <a href="HW4.html">HW4</a>
-            </td>
-            <td>
-                <a href="HW5-1.html">HW5-1</a>
-            </td>
-            <td>
-                <a href="HW5-3.html">HW5-3</a>
-            </td>
-            <td>
                 <a href="HW5-2+5-3.html">HW5-3</a>
             </td>
             <td>
@@ -68,7 +76,17 @@
             </td>
             <td>
                 <a href="HW6-2.html">HW6-2</a>
-            </td>            
+            </td>       
+        </tr>
+        <tr>
+            <td>
+                <img src="6-3.gif" width="200px">
+            </td>           
+        </tr>
+        <tr>
+            <td>
+                <a href="HW6-3.html">HW6-3</a>                
+            </td>
         </tr>
     </table>
 </body>
