--- a/hw1/index.html
+++ b/hw1/index.html
@@ -81,12 +81,18 @@
         <tr>
             <td>
                 <img src="6-3.gif" width="200px">
-            </td>           
+            </td>       
+            <td>
+                <img src="6-4.gif" width="200px">
+            </td>             
         </tr>
         <tr>
             <td>
                 <a href="HW6-3.html">HW6-3</a>                
             </td>
+            <td>
+                <a href="HW6-4.html">HW6-4</a>
+            </td>         
         </tr>
     </table>
 </body>
